WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77812
SVG ManualTest animateColor-from-by.svg is failing
https://bugs.webkit.org/show_bug.cgi?id=77812
Summary
SVG ManualTest animateColor-from-by.svg is failing
Philip Rogers
Reported
2012-02-04 13:19:13 PST
Animating color using the "by" attribute incorrectly falls back to the "to" attribute (see SVGAnimatedColorAnimator::calculateFromAndByValues).
Attachments
Initial approach
(8.24 KB, patch)
2012-02-05 16:05 PST
,
Philip Rogers
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philip Rogers
Comment 1
2012-02-05 16:05:04 PST
Created
attachment 125539
[details]
Initial approach
WebKit Review Bot
Comment 2
2012-02-06 16:55:29 PST
Comment on
attachment 125539
[details]
Initial approach Clearing flags on attachment: 125539 Committed
r106878
: <
http://trac.webkit.org/changeset/106878
>
WebKit Review Bot
Comment 3
2012-02-06 16:55:33 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug