Fix color animations by value https://bugs.webkit.org/show_bug.cgi?id=77812

Patch by Philip Rogers <pdr@google.com> on 2012-02-06
Reviewed by Darin Adler.

Source/WebCore:

Test: svg/animations/animate-color-fill-from-by.html

* svg/SVGAnimatedColor.cpp:
(WebCore::SVGAnimatedColorAnimator::calculateFromAndByValues):

LayoutTests:

* svg/animations/animate-color-fill-from-by-expected.txt: Added.
* svg/animations/animate-color-fill-from-by.html: Added.
* svg/animations/script-tests/animate-color-fill-from-by.js: Added.
(checkFillColor):
(sample1):
(sample2):
(sample3):
(executeTest):

Canonical link: https://commits.webkit.org/94796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106878 268f45cc-cd09-0410-ab3c-d52691b4dbfc